fix read and otput file